# cookiecutter-tdsp-python

./: .pre-commit-config.yaml  README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.__package_name}}/: .pre-commit-config.yaml  README.md  setup.cfg  setup_project.sh
{{cookiecutter.__package_name}}/code/exploratory_data_analysis/: data_pipeline.json
{{cookiecutter.__package_name}}/code/modeling/: model.py
{{cookiecutter.__package_name}}/docs/data_dictionaries/: README.md
{{cookiecutter.__package_name}}/docs/data_reports/: README.md  data-pipeline.txt
{{cookiecutter.__package_name}}/sample_data/: README.md
{{cookiecutter.__package_name}}/sample_data/for_modeling/: modelling.md
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  README.md  setup.cfg  setup_project.sh
{{cookiecutter.project_name}}/sample_data/processed/: processed.md
{{cookiecutter.project_name}}/sample_data/raw/: raw-data.md
