[metadata]
name = {{cookiecutter.__package_name}}
description = {{cookiecutter.project_name}} project following Microsoft´s Team Data Science Process (TDSP) guidelines.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.9
package_dir =
    = code

[options.packages.find]
where = code

[options.extras_require]
dev =
    black
    coverage
    flake8
    ipykernel
    jupyter
    pre-commit
    pytest

[isort]
profile = black
src_paths = code,test

[versioneer]
vcs = git
style = pep440
versionfile_source = code/_version.py
versionfile_build = code/_version.py
tag_prefix = v
parentdir_prefix = code-

[coverage:run]
branch = True
omit =
    */tests/*
    code/_typing.py
    code/_version.py
source = code

[coverage:report]
ignore_errors = False
show_missing = True
omit =
    code/_version.py
exclude_lines =
    pragma: no cover
    def __repr__
    if self\.debug
    raise AssertionError
    raise NotImplementedError
    AbstractMethodError
    if 0:
    if __name__ == .__main__.:
    if TYPE_CHECKING:

[coverage:html]
directory = coverage_html_report
